# shape-completion

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
conf/: README.md  automatica.yaml  automatica_2023.yaml  automatica_2023_kinect.yaml  automatica_2023_kinect_gpt2.yaml  automatica_2024_kinect.yaml  automatica_depth.yaml  automatica_dvr.yaml  cifar10_diffusion.yaml  completion3d.yaml  config.yaml  cvpr_2025.yaml  cvpr_2025_cond.yaml  cvpr_2025_depth.yaml  cvpr_2025_depth_cls.yaml  cvpr_2025_depth_dvr.yaml  cvpr_2025_vae.yaml  dtu_dvr.yaml  dtu_dvr_fast.yaml  fmnist_diffusion.yaml  humanoids_2023.yaml  mnist_diffusion.yaml  modelnet40.yaml  mugs.yaml  mugs_300p_norm.yaml  mugs_dropout.yaml  mugs_no_aug.yaml  mugs_overfit.yaml  mugs_paper.yaml  mugs_pssnet.yaml  mugs_realnvp.yaml  mugs_sim2real_norm.yaml  mugs_sim2real_scale.yaml  onet.yaml  onet_shapenet_v1.yaml  overfit.yaml  overfit_automatica.yaml  overfit_bunny.yaml  shapenet.yaml  shapenet_core.yaml  (+37 more)
conf/dirs/: default.yaml
dataset/: README.md  __init__.py
dataset/scripts/: process_dataset.py
dataset/src/: __init__.py  bop.py  bop_scene.py  cache.py  coco.py  completion3d.py  fields.py  graspnet.py  image.py  mesh.py  modelnet.py  shapenet.py  shared.py  tabletop.py  transforms.py  tv_transforms.py  utils.py  ycb.py
dataset/tests/: test_bop_scene.py  test_coco.py  test_datasets.py  test_fields.py  test_graspnet.py  test_process_dataset_script.py  test_tabletop.py  test_transforms.py  test_utils.py
eval/: README.md  __init__.py
eval/scripts/: compare_eval.py  eval.py  gen_eval.py  generate.py  mesh_eval.py
eval/src/: gen_metrics.py  prd.py  prdc.py  utils.py
eval/tests/: test_metrics.py  test_prd.py  test_prdc.py  test_public_api.py  test_scripts_smoke.py  test_utils_metrics.py
inference/: README.md
inference/scripts/: inference_mesh_tutorial.py  inference_pointcloud.py
inference/src/: utils.py
inference/tests/: test_inference_mesh_tutorial_smoke.py  test_inference_pointcloud_smoke.py  test_public_api.py  test_utils.py
libs/: .gitignore  README.md  __init__.py  binvox  libmanager.py
libs/libchamfer/: README.md  __init__.py  setup.py
libs/libemd/: README.md  __init__.py  setup.py  test_emd.py
libs/libfusion/: README.md  __init__.py
libs/libintersect/: README.md  __init__.py  inside_mesh.py  setup.py  triangle_hash.pyx
libs/libkinect/: .gitignore  CMakeLists.txt  __init__.py  pyproject.toml  setup.py  simulate_pxd.pxd  simulate_wrapper.pyx
libs/libkinect/include/render_kinect/: camera.h  gaussian.h  kinectSimulator.h  noise.h  noiseutils.h  objectMeshModel.h  perlin.h  simplex.h  simulate.h
libs/libmise/: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
libs/libpointnet/: .gitignore  README.md  __init__.py  setup.py
libs/libpvconv/: README.md  __init__.py  ball_query.py  pvconv.py  pyproject.toml  se.py  setup.py  shared_mlp.py  voxelization.py
libs/libsimplify/: .gitignore  README.md  __init__.py  setup.py
libs/pvconv/: __init__.py  pvconv.py  shared_mlp.py  voxelization.py
libs/tests/: test_fps.py  test_libchamfer.py  test_libfusion.py  test_libintersect.py  test_libkinect.py  test_libmise.py  test_libpointnet.py  test_libsimplify.py
libs/vega/: README.md  __init__.py  computeDistanceField_vega4  isosurfaceMesher
models/: README.md  __init__.py
models/src/: __init__.py  completr.py  conv_onet.py  dgcnn.py  dinov2.py  dmtet.py  dpt.py  dvr.py  fpn.py  grid.py  hourglass.py  idr.py  if_net.py  mask_rcnn.py  mc_dropout_net.py  mixins.py  model.py  onet.py  pcn.py  pifu.py  point_transformer.py  pointnet.py  pointnetpp.py  psgn.py  pssnet.py  pvcnn.py  realnvp.py  resnet.py  shape3d2vecset.py  shapeformer.py  snowflakenet.py  transformer.py  utils.py  vae.py  voxel.py  vqdif.py  xdconf.py
models/tests/: test_autoregression.py  test_completr.py  test_conv_onet.py  test_dgcnn.py  test_diffusion.py  test_dino.py  test_dmtet.py  test_dpt.py  test_dvr.py  test_fpn.py  test_grid.py  test_grid_diffusion.py  test_if_net.py  test_mask_rcnn.py  test_misc.py  test_model_base.py  test_models.py  test_onet.py  test_pifu.py  test_point_transformer.py  test_pointnet.py  test_pointnetpp.py  test_pssnet.py  test_pvcnn.py  test_realnvp.py  test_shape3d2vecset.py  test_shapeformer.py  test_tinycudann.py  test_transformer.py  test_utils.py  test_vae.py  test_vqdif.py  test_xdconv.py
process/: README.md  __init__.py  find_uncertain_regions.py  generate_physics_poses.py  make_watertight.py  process_mesh.py  render_data.py  render_kinect.py  render_kinect_parallel.py  sdf_from_mesh.py  ycb_sfm.py
process/scripts/: add_kinect_sim.py  blender_load.py  compare_bop_depth_dirs.py  find_uncertain_regions.py  generate_bop_da3_depth.py  generate_physics_poses.py  make_watertight.py  process_mesh.py  render_blenderproc.py  render_kinect.py  render_kinect_parallel.py  sdf_from_mesh.py  ycb_sfm.py
process/src/: __init__.py  carve.py  fill.py  fuse.py  utils.py
process/tests/: test_blender_load.py  test_carve.py  test_compare_bop_depth_dirs.py  test_fill.py  test_find_pose.py  test_find_uncertain_regions.py  test_fuse.py  test_generate_bop_da3_depth.py  test_make_watertight.py  test_process_mesh.py  test_render_blenderproc.py  test_render_kinect.py  test_render_kinect_parallel.py  test_sdf_from_mesh.py  test_utils.py  test_ycb_sfm.py
scripts/: activate_env.sh  bootstrap_dev.sh  compile_cuda_libs.sh  render.sh  render_slurm.sh  render_tabletop.sh  run.sh  sweep.sh  train_eval.sh  train_eval_select.sh
scripts/test/: check_all.sh  check_nightly.sh  check_pr.sh  check_renderer.sh  check_source_coverage.sh  test_eval.sh  test_eval_gen.sh  test_eval_img.sh  test_eval_mesh.sh  test_eval_pcd.sh  test_eval_pcd_select.sh  test_eval_pcd_uncond.sh  test_eval_uncond.sh
train/: .gitignore  README.md  __init__.py
train/scripts/: train.py
train/src/: __init__.py  data_module.py  model.py  schedulers.py  utils.py
train/tests/: test_callbacks.py  test_data_module.py  test_ema_callback.py  (+10 more)
utils/: README.md
visualize/: README.md  __init__.py
(+100 files in other folders)
